--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,13 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
 </head>
+<style>
+   .display {
+  height: 60px;
+  font-size: 60px;
+  text-align: right;
+}
+</style>
 <body>
       <div class="container">
             <div class="row">
