--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="components/loader.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
+  <script src="components/calc.js"></script>
 </head>
 <style>
    .display {
@@ -18,76 +19,78 @@
 </style>
 <body>
       <div class="container">
+         <div class="jumbotron" id="fundoAmarelo">
             <div class="row">
                 <div class="col-12">
                     <div class="jumbotron">
                           <div class="form-group">
-                            <input type="text" class="form-control display">
+                            <input type="text" class="form-control display" readonly id="display">
                           </div>
                       </div>
                 </div>
             </div>
             <div class="row linha">
               <div class="offset-6  col-6">
-                 <button class="btn btn-primary btn-block">C</button>
+                 <button class="btn btn-danger btn-block "id="c">C</button>
                </div>
             </div>
             <div class="row linha">
                <div class="col-3">
-                 <button class="btn btn-primary btn-block">1</button>
+                 <button class="btn btn-dark btn-block numerico" value="1">1</button>
                </div>
                 <div class="col-3">
-                    <button class="btn btn-primary btn-block">2</button>
+                    <button class="btn btn-dark btn-block numerico" value="2">2</button>
                 </div>
                 <div class="col-3">
-                    <button class="btn btn-primary btn-block">3</button>
+                    <button class="btn btn-dark btn-block numerico" value="3">3</button>
                 </div>
                 <div class="col-3">
-                    <button class="btn btn-primary btn-block">-</button> 
+                    <button class="btn btn-dark btn-block numerico" id="sub">-</button> 
                 </div>
             </div>
             <div class="row linha">
                  <div class="col-3">
-                 <button class="btn btn-primary btn-block">4</button>
+                 <button class="btn btn-dark btn-block numerico" value="4">4</button>
                </div>
                 <div class="col-3">
-                    <button class="btn btn-primary btn-block">5</button>
+                    <button class="btn btn-dark btn-block numerico" value="5">5</button>
                 </div>
                 <div class="col-3">
-                    <button class="btn btn-primary btn-block">6</button>
+                    <button class="btn btn-dark btn-block numerico" value="6">6</button>
                 </div>
                 <div class="col-3">
-                    <button class="btn btn-primary btn-block">+</button> 
+                    <button class="btn btn-dark btn-block" id="somar">+</button> 
                 </div>
             </div>
             <div class="row linha">
                  <div class="col-3">
-                 <button class="btn btn-primary btn-block">7</button>
+                 <button class="btn btn-dark btn-block numerico" value="7">7</button>
                </div>
                 <div class="col-3">
-                    <button class="btn btn-primary btn-block">8</button>
+                    <button class="btn btn-dark btn-block numerico" value="8">8</button>
                 </div>
                 <div class="col-3">
-                    <button class="btn btn-primary btn-block">9</button>
+                    <button class="btn btn-dark btn-block numerico" value="9">9</button>
                 </div>
                 <div class="col-3">
-                    <button class="btn btn-primary btn-block">/</button> 
+                    <button class="btn btn-dark btn-block " id="div">/</button> 
                 </div>
             </div>
             <div class="row linha">
                  <div class="col-3">
-                 <button class="btn btn-primary btn-block">0</button>
+                 <button class="btn btn-dark btn-block numerico" value="0">0</button>
                </div>
                 <div class="col-3">
-                    <button class="btn btn-primary btn-block">.</button>
+                    <button class="btn btn-dark btn-block numerico" value=".">.</button>
                 </div>
                 <div class="col-3">
-                    <button class="btn btn-primary btn-block">=</button>
+                    <button class="btn btn-dark btn-block"id="igual" >=</button>
                 </div>
                 <div class="col-3">
-                    <button class="btn btn-primary btn-block">*</button> 
+                    <button class="btn btn-dark btn-block" id="mult">*</button> 
                 </div>
             </div>
+         </div>
       </div>
 </body>
 </html>
